--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,14 @@
     <artifactId>fzsclient</artifactId>
     <version>1.0.0</version>
 
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub tb-soft Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/tb-soft/fzs-client</url>
+        </repository>
+    </distributionManagement>
+
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
