--- a/pom.xml
+++ b/pom.xml
@@ -25,9 +25,9 @@
 
     <distributionManagement>
         <repository>
-            <id>github</id>
-            <name>GitHub tb-soft Apache Maven Packages</name>
-            <url>https://maven.pkg.github.com/tb-soft/oragent-client</url>
+            <id>ossrh</id>
+            <name>Central Repository OSSRH</name>
+            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
         </repository>
     </distributionManagement>
 
